--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,3 +1,5 @@
+<app-navbard></app-navbard>
+
 <table class="table table-striped table-bordered table-hover table-dark" >
     <thead>
       <tr>
@@ -7,27 +9,28 @@
         <th>Acciones</th>
       </tr>
     </thead>
-    <tbody> 
-      <tr>
-        <td>John Doe</td>
-        <td>john.doe@example.com</td>
-        <td>(555) 555-1212</td>
-        <td><button type="button" class="btn btn-outline-primary ">Primary</button>
-        <button type="button" class="m-3 btn btn-outline-danger">Primary</button></td>
+    <tbody > 
+      <tr *ngFor="let client of clients" >
+        <td>{{client.Name}}</td>
+        <td>{{client.Email}}</td>
+        <td>{{client.PhoneCodeAndNumber}}</td>
+        <td>
+        <button type="button" class="btn btn-outline-success " (click)="goToDetail(client.Id)">Detalle</button>
+        <button type="button" class="m-3 btn btn-outline-info" (click)="deleteClient(client.Id)">Modificar</button>
+        <button type="button" class="m-3 btn btn-outline-danger" (click)="deleteClient(client.Id)">Borrar</button>
+      </td>
       </tr>
-      <tr>
+
+      <!-- <tr>
         <td>Jane Doe</td>
         <td>jane.doe@example.com</td>
         <td>(555) 555-1313</td>
-        <td><button type="button" class="btn btn-outline-primary">Primary</button>
+        <td><button type="button" class="btn btn-outline-primary" >Primary</button>
         <button type="button" class="m-3 btn btn-outline-danger">Primary</button></td>
-      </tr>
-      <tr>
-        <td>Bob Smith</td>
-        <td>bob.smith@example.com</td>
-        <td>(555) 555-1414</td>
-        <td><button type="button" class="btn btn-outline-primary">Primary</button>
-        <button type="button" class="m-3 btn btn-outline-danger">Primary</button></td>
-      </tr>
+      </tr> -->
+
     </tbody>
   </table>
+
+
+<app-footer></app-footer>
